# AudioExtractor2

./: .gitignore  LICENSE  README.md
.github/workflows/: windows-release.yml
app/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/src/: index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
app/src/components/: Panel.tsx  StatusBadge.tsx
app/src/layout/: AppShell.tsx
app/src/lib/: api.ts  format.ts  query-client.ts  tauri.ts
app/src/routes/: router.tsx
app/src/store/: ui-store.ts
docs/: architecture.md  export-phase.md  extraction-phase.md  phase1-validation.md  phase3-live-validation.md  phase3-stt-live-validation.md  phase3-validation.md  transcription-phase.md
shared/contracts/: api.ts
worker/: requirements.txt
worker/app/: main.py
worker/app/api/: dependencies.py  routes.py
worker/app/core/: config.py
worker/app/db/: database.py  migrations.py
worker/app/models/: domain.py
worker/app/repositories/: exports.py  extraction.py  meetings.py  transcription.py
worker/app/schemas/: api.py
worker/app/services/: settings_backup.py
worker/app/utils/: files.py  subprocesses.py
worker/tests/: _support.py  phase1_validation_runner.py  test_api_resilience.py  test_chunk_planning.py  test_exports.py  test_extraction_context_selection.py  test_extraction_pipeline.py  test_extraction_postprocess.py  test_gemini_service.py  test_google_adapter.py  test_transcript_stitcher.py  test_transcription_pipeline.py
(+34 files in other folders)
