[package]
name = "audio-extractor-2"
version = "0.1.0"
description = "Meeting transcription preparation desktop shell"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "audio_extractor_2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.2"
